initial Commit to Web1

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,7 +13,7 @@ main:
   - title: "Categories"
     url: /categories/
   # - title: "Other Blogs"
-  #   url: https://visualkrafts.wordpress.com/
+  #   url: https://rafts.wordpress.com/
   - title: "Tags"
     url: /tags/
   # - title: "Pages"
